$Id$

Denora v1.4.3-SVN
-----------------

Additions
n/a

Changes
09/02/17 r241 Fixed JOIN message handling in Plexus3
09/02/17 r241 Fixed user and channel modes in Plexus3 protocol
09/02/16 r239 Updated GeoIP.dat

Fixes
09/01/13 r236 admin from denora.conf now overrides admin.db [closes #517]
09/01/12 r235 mysql backup module now checks for sql connection [closes #524]
09/01/12 r235 Fixed chanstats problem on some x64 systems
08/12/18 r235 P10 UIDs are case sensitive [closes #525]
08/09/15 r233 [1] Fixed nss problems on FreeBSD systems [closes #515]

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Rob <rob@anope.org>


Denora v1.4.2a
--------------

Additions
n/a

Changes
08/09/03 r227 Updated GeoIP.dat
08/08/22 r214 Fixed exclude command assuming ustats user instead of nick
08/08/22 r204 Channel logging is now enabled even in debug mode

Fixes
08/09/08 r230 Fixed parsing issue in inspircd11 fjoin [closes #514]
08/09/08 r230 Fixed issue on empty VERSION inspircd11 message [closes #514]
08/09/06 r228 Now compiles on 64 bit Windows
08/09/03 r227 Fixed GeoIP related crash with newer dat files [closes #512]
08/09/03 r226 Fixed possible screwup of ctcp/tld overall count in db files
08/09/02 r224 Fixed crash on invalid nick country name [closes #512]
08/08/26 r223 Fixed wrong logging about weekly/monthly chanstats reset
08/08/24 r221 Fixed some potential off-by-one overflows
08/08/24 r217 Fixed erratic description of the exclude command
08/08/24 r216 Fixed crypt failure causing crash on login
08/08/24 r215 Fix a potential desync on JOIN overriding TS
08/08/23 r213 Fixed global ustats record not created after removed from exclude
08/08/23 r212 Fixed chanstats not re-enabled for users removed from exclude
08/08/23 r211 Fixed excluded users being readded to chanstats
08/08/23 r210 Removed pointless code that could cause word count to go backwards
08/08/22 r208 Windows issue finally fixed: time_t need to be casted [closes #435]